--- a/css/styles.css
+++ b/css/styles.css
@@ -17,29 +17,74 @@ h3 {
 a {
     text-decoration: none;
     color: currentColor;
-
-    ul {
-        list-style: none;
-        margin-top: 0;
-        margin-bottom: 0;
-        padding-left: 0;
-    }
-
+}
+ul {
+    list-style: none;
+    padding: 0;
+    margin: 0;
 }
 
-.container{
-    width: 100%;
-    min-width: 1158px;
+img {
+    display: block;
+    min-width: 100%;
+    height: auto;
+}
+
+
+.visually-hidden {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    margin: -1px;
+    border: 0;
+    padding: 0;
+    white-space: nowrap;
+    clip-path: inset(100%);
+    clip: rect(0 0 0 0);
+    overflow: hidden;
 }
 
 .link {
     text-decoration: none;
+    display: inline-block;
 }
 
 .list {
     list-style: none;
 }
 
+.container {
+    max-width: 100%;
+    min-width: 1158px;
+    padding: 0 15px 0 15px;
+    margin: 0 auto;
+}
+
+.header {
+    border-bottom: 1px solid #e7e9fc;
+}
+
+.header-container {
+    display: flex;
+    width: 1158px;
+    padding: 0 15px 0 15px;
+    margin: 0 auto;
+    justify-content: center;
+    align-items: center;
+    flex-shrink: 0;
+}
+
+.navigation {
+    display: flex;
+    flex-grow: 1;
+    align-items: center;
+}
+
+.heder-list {
+    display: flex;
+    gap: 40px;
+    align-items: center;
+}
 .logo {
     color: #4D5AE5;
     font-family: Raleway, sans-serif;
@@ -48,6 +93,8 @@ a {
     line-height: 1.17;
     letter-spacing: 0.03em;
     text-transform: uppercase;
+    display: flex;
+    margin-right: 76px;
 }
 
 .logo-part {
@@ -59,6 +106,9 @@ a {
     font-weight: 500;
     line-height: 1.5;
     letter-spacing: 0.02em;
+    padding-top: 24px;
+    padding-bottom: 24px;
+    display: inline-block;
 }
 
 .nav-link:hover,
@@ -67,12 +117,19 @@ a {
 }
 
 .heder-address {
+    display: flex;
     font-style: normal;
+    margin-left: auto;
 }
 
-.heder-adresss-list {}
+.heder-adresss-list {
+    display: flex;
+    gap: 40px;
+}
 
-.heder-address-item {}
+.heder-address-item {
+    padding-left: 40px;
+}
 
 
 .heder-address-link {
@@ -86,11 +143,15 @@ a {
     color: #404bbf;
 }
 
+
 .hero {
     background-color: #2E2F42;
     width: 1440px;
-        height: 600px;
-        flex-shrink: 0;
+    height: 600px;
+    flex-shrink: 0;
+    padding: 188px 0;
+    margin: auto;
+    text-align: center;
 }
 
 .hero-container {
@@ -104,10 +165,10 @@ a {
     line-height: 1.07;
     letter-spacing: 0.02em;
     text-align: center;
-    padding-top: 188px;
-    padding-right: 472px;
-    padding-bottom: 292px;
-    padding-left: 472px;
+    max-width: 496px;
+    margin-bottom: 48px;
+    margin: 0 auto;
+
 }
 
 .hero-btn {
@@ -116,13 +177,39 @@ a {
     line-height: 1.5;
     letter-spacing: 0.04em;
     background-color: #4D5AE5;
-    cursor: pointer
-}
+    cursor: pointer;
+    display: inline-flex;
+    padding: 16px 32px;
+    align-items: flex-start;
+    gap: 10px;
+    border-radius: 4px;
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
+    box-sizing: border-box;
+    min-width: 169px;
+    display: inline-block;
+    margin-left: auto;
+    margin-right: auto;
+
+    
+} 
 
 .hero-btn:hover,
 .hero-btn:focus {
     color: #FFF;
     background-color: #404BBF;
+}
+
+.princeples {
+    padding-top: 120px;
+    padding-bottom: 120px;
+}
+
+.princeples-list {
+    display: flex;
+}
+
+.princeples-text {
+    flex-basis: calc((100% - 72px)/4);
 }
 
 .feature {
@@ -144,6 +231,13 @@ a {
     background-color: #F4F4FD;
 }
 
+.team-container{
+    display: block;
+    padding-right: 156px;
+    padding-bottom: 120px;
+    padding-left: 156px;
+}
+
 .team-title {
     color: #2E2F42;
     font-size: 36px;
@@ -152,10 +246,13 @@ a {
     letter-spacing: 0.02em;
     text-transform: capitalize;
     text-align: center;
+    display: block;
+   
 }
 
 .team-item {
     background-color: #FFFFFF;
+    width: calc((100% - 72px)/4);
 }
 
 .name {
@@ -179,10 +276,13 @@ a {
     line-height: 1.17;
     letter-spacing: 0.03em;
     text-transform: uppercase;
+    display: inline-block;
+    margin-bottom: 16px;
 }
 
 .footer-color {
     background: #2E2F42;
+    padding: 100px 0;
 }
 
 .footer-logo-part {
@@ -198,10 +298,18 @@ a {
     color: #F4F4FD;
     line-height: 1.5;
     letter-spacing: 0.02em;
+    min-width: 264px;
 }
 
+.portfolio-container {
+    padding: 32px 16px;
+    border: 1px solid #e7e9fc;
+    border-top: none;
+    margin-bottom: 8px;
+}
 .portfolio {
     background: #FFF;
+    padding: 120px 0;
 }
 
 .portfolio-title {
@@ -212,8 +320,26 @@ a {
     letter-spacing: 0.02em;
     text-transform: capitalize;
     text-align: center;
+    margin-bottom: 72px;
+    padding-top: 120px;
+    margin-top: 120px;
 }
 
+.portfolio-list {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    column-gap: 24px;
+    row-gap: 48px;
+}
+
+.portfolio-item-list {
+    width: calc((100%-48px)/3);
+}
+
+.portfolio-img {
+    margin: 0 auto;
+}
 .portfolio-item {
     color: #2E2F42;
     font-family: Roboto;
@@ -221,6 +347,8 @@ a {
     font-weight: 500;
     line-height: 1.2;
     letter-spacing: 0.02em;
+    margin-top: 32px;
+    margin-bottom: 8px;
 }
 
 .portfolio-text {
@@ -228,4 +356,9 @@ a {
     font-weight: 400;
     line-height: 1.5;
     letter-spacing: 0.02em;
+}
+.portfolio-item-box {
+    padding: 32px 16px;
+    border: 1px solid #e7e9fc;
+    border-top: none;
 }
