--- a/css/styles.css
+++ b/css/styles.css
@@ -155,6 +155,7 @@ img {
 }
 
 .hero-container {
+    
      
 }
 
@@ -168,6 +169,7 @@ img {
     max-width: 496px;
     margin-bottom: 48px;
     margin: 0 auto;
+    
 
 }
 
@@ -189,7 +191,10 @@ img {
     display: inline-block;
     margin-left: auto;
     margin-right: auto;
-
+    margin-top: 48px;
+    display: block;
+    height: 56px;
+    border: none;
     
 } 
 
@@ -202,10 +207,21 @@ img {
 .princeples {
     padding-top: 120px;
     padding-bottom: 120px;
+    
 }
 
+.princeples-container {
+    display: flex;
+    width: 1158px;
+    padding: 0 15px 0 15px;
+    margin: 0 auto;
+    justify-content: center;
+    align-items: center;
+    flex-shrink: 0;
+}
 .princeples-list {
     display: flex;
+    gap: 24px;
 }
 
 .princeples-text {
@@ -218,6 +234,7 @@ img {
     font-weight: 500;
     line-height: 1.2;
     letter-spacing: 0.02em;
+    margin-bottom: 8px;
 }
 
 .feature-text {
@@ -229,13 +246,16 @@ img {
 
 .team-section {
     background-color: #F4F4FD;
+    padding: 120px 0;
 }
 
 .team-container{
     display: block;
-    padding-right: 156px;
+    /* padding-right: 156px;
     padding-bottom: 120px;
-    padding-left: 156px;
+    padding-left: 156px; */
+    width: 1440px;
+    
 }
 
 .team-title {
@@ -247,12 +267,23 @@ img {
     text-transform: capitalize;
     text-align: center;
     display: block;
+    margin-bottom: 72px;
    
+}
+
+.team-list {
+    display: flex;
+    gap: 24px;
 }
 
 .team-item {
     background-color: #FFFFFF;
     width: calc((100% - 72px)/4);
+    border-radius: 0px 0px 4px 4px;
+}
+
+.workers {
+    padding: 32px 0;
 }
 
 .name {
@@ -261,11 +292,25 @@ img {
     font-weight: 500;
     line-height: 1.2;
     letter-spacing: 0.02em;
+    text-align: center;
+    margin-bottom: 8px;
+
 }
 
 .position {
     line-height: 1.5;
     letter-spacing: 0.02em;
+    text-align: center;
+}
+
+.footer-color {
+    background: #2E2F42;
+    padding: 100px 0;
+    width: 1440px;
+    height: 312px;
+    flex-shrink: 0;
+    margin: 0 auto;
+
 }
 
 .footer-logo {
@@ -280,9 +325,15 @@ img {
     margin-bottom: 16px;
 }
 
-.footer-color {
-    background: #2E2F42;
-    padding: 100px 0;
+
+
+.footer-container{
+    /* display: block;
+    width: 1440px;
+    height: 312px;
+    flex-shrink: 0;
+    margin: 0 auto; */
+    
 }
 
 .footer-logo-part {
@@ -292,6 +343,7 @@ img {
     font-weight: 700;
     line-height: 1.17;
     letter-spacing: 0.03em;
+    margin-bottom: 16px;
 }
 
 .footer-text {
@@ -303,13 +355,18 @@ img {
 
 .portfolio-container {
     padding: 32px 16px;
-    border: 1px solid #e7e9fc;
     border-top: none;
     margin-bottom: 8px;
+    width: 1440px;
+    flex-shrink: 0;
+    padding-top: 120px;
+    padding-bottom: 120px;
+    
 }
 .portfolio {
     background: #FFF;
-    padding: 120px 0;
+    /* padding: 120px 0; */
+   
 }
 
 .portfolio-title {
@@ -321,8 +378,6 @@ img {
     text-transform: capitalize;
     text-align: center;
     margin-bottom: 72px;
-    padding-top: 120px;
-    margin-top: 120px;
 }
 
 .portfolio-list {
@@ -334,7 +389,8 @@ img {
 }
 
 .portfolio-item-list {
-    width: calc((100%-48px)/3);
+    width: calc((100% - 48px) / 3);
+    border: 1px solid #e7e9fc;
 }
 
 .portfolio-img {
