--- a/css/styles.css
+++ b/css/styles.css
@@ -367,7 +367,7 @@ img {
     background: #FFF;
     padding: 120px 0 120px 0;
     
-    
+
 }
 
 .portfolio-title {
@@ -379,15 +379,12 @@ img {
     text-transform: capitalize;
     text-align: center;
     margin-bottom: 72px;
-    /* padding-top: 120px;
-    margin-top: 120px; */
+    
 }
 .portfolio-container {
-    /* border-top: none;
-    margin-bottom: 8px;
-    width: 1440px; */
     display: block;
     width: 1440px;
+    
 }
 
 .portfolio-list {
@@ -396,14 +393,13 @@ img {
     align-items: center;
     column-gap: 24px;
     row-gap: 48px;
-    /* width: 1440px; */
-    margin-right: 156px;
-    margin-left: 156px;
+    width: 1440px;
   
 
 }
 .portfolio-item-list {
     width: calc((100% - 48px)/3);
+    
     
 }
 
@@ -420,8 +416,7 @@ img {
     font-weight: 500;
     line-height: 1.2;
     letter-spacing: 0.02em;
-    margin-top: 32px;
-    margin-bottom: 8px;
+
 }
 
 .portfolio-text {
