--- a/css/styles.css
+++ b/css/styles.css
@@ -393,7 +393,9 @@ img {
     align-items: center;
     column-gap: 24px;
     row-gap: 48px;
-    width: 1440px;
+    /* width: 1440px; */
+    margin-right: 156px;
+    margin-left: 156px;
   
 
 }
@@ -416,6 +418,7 @@ img {
     font-weight: 500;
     line-height: 1.2;
     letter-spacing: 0.02em;
+    margin-bottom: 8px;
 
 }
 
